<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">edu.mtu.citizenscience.TreePlotter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="plot_name">plot name</string>
    <string name="coordinates">coordinates</string>
    <string name="location">Location</string>
    <string name="camera">Camera</string>
    <string name="plot_info">Info</string>
    <string name="upload">Upload</string>
    <string name="new_plot">+ New Plot</string>
    <string name="title_activity_resources">Resources</string>
    <string name="title_activity_resource">Resource</string>
    <string name="title_activity_help">Help</string>
    <string name="plots_table">Plot Table</string>
    <string name="title_activity_plottable">MainActivity</string>
    <string name="title_activity_plot_info">PlotInfoActivity</string>
    <string name="small_add">+ Small Tree</string>
    <string name="large_add">+ Large Tree</string>
    <string name="large">Large Trees:</string>
    <string name="small">Small Trees:</string>
    <string name="tree_name">Tree Name</string>
    <string name="abundance">Abundance</string>
    <string name="tree">Tree Name :</string>
    <string name="abd_lvl">Abundance Level :</string>
    <string name="intro">Please enter your logging information if you have not used this app before by clicking the Login, otherwise continue to the Plot Table</string>
    <string name="login">New User</string>
    <string name="treePlotApp">Tree Plotter App</string>
    <string name="userid">User ID:</string>
    <string name="email">Email:</string>
    <string name="exp">Experience Level:</string>
    <string name="beg">Beginner</string>
    <string name="inter">Intermediate</string>
    <string name="adv">Advanced</string>
    <string name="returner">Save and Return</string>
    <string name="lat">latitude</string>
    <string name="longi">longitude</string>
    <string name="get_gps_coords">Get GPS Coordinates</string>
    <string name="action_help">Context Help</string>
    <string name="delete_row">Delete</string>
    <string name="help">To make a new user, click \n\t "New User" \nif you already have a Username, choose it then select \n\t "Plot Table"</string>
    <string name="help1_1">Enter a user ID to represent yourself</string>
    <string name="help1_2">Enter your email address</string>
    <string name="help1_3">Enter your experience level:</string>
    <string name="help1_4"> \t &#8226; Beginner: new to identifying tree species</string>
    <string name="help1_5"> \t &#8226; Intermediate: has some experience identifying tree species</string>
    <string name="help1_6"> \t &#8226; Expert: skilled in identifying tree species</string>
    <string name="help1_7">Tap the "Save and Return" button to return to the main screen</string>
    <string name="help2_1">Press "+ New Plot" button to create a new plot</string>
    <string name="help2_2">Then enter a plot name and generate the GPS coordinates or enter them manually</string>
    <string name="help2_3">Once the new plot is generated you can take a picture of the plot using the camera button, edit the tree information by clicking on the leaf icon, and upload it by pressing the paper airplane button.</string>
    <string name="help3_1">Press "+ Small Tree" button to create a listing of a tree species, a pop up screen will appear to:
        \n\n\t Enter the name of the tree species (consult the resources for help identifying tree species) then enter the abundance of that tree species
        \n\n\t The camera button can take pictures if you are unsure of the tree (this is not required)
        \n\n The same can be done for "+ Large Tree"</string>
        
    <string name="help2_4">Valid Plot Name must be of min length of 4 characters max length of 10 characters</string>

    <string-array name="abundance_level">
        <item>Rare</item>
        <item>Uncommon</item>
        <item>Common</item>
    </string-array>

    <string name="title_activity_help1">Help1</string>
    <string name="title_activity_help2">Help2</string>
    <string name="title_activity_help3">Help3</string>
    <string name="title_activity_help4">Help4</string>

</resources>