<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/userinfo_text_userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userid"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/userinfo_editUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/userinfo_text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/userinfo_editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />
    
    
    <TextView
        android:id="@+id/userinfo_text_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/rg_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" >

        <RadioButton
            android:id="@+id/rg_beg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/beg" />

        <RadioButton
            android:id="@+id/rg_int"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inter" />

        <RadioButton
            android:id="@+id/rg_adv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adv" />
    </RadioGroup>

    <Button
        android:id="@+id/userinfo_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete" />

</LinearLayout>