<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/plot_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:text="@string/plot_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/pt_upload"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/ic_action_send"
        android:contentDescription="@string/upload"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>

    <ImageButton
        android:id="@+id/pt_info"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/ic_leaf"
        android:contentDescription="@string/plot_info"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/pt_upload"
        android:text="@string/plot_info" />

    <ImageButton
        android:id="@+id/pt_camera"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/ic_action_photo"
        android:contentDescription="@string/camera"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/pt_info"
        android:text="@string/camera" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/latitude"
        android:layout_toLeftOf="@+id/pt_camera"
        android:text="@string/longi"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/longitude"
        android:layout_below="@+id/plot_name"
        android:text="@string/lat"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
