<merge xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.mtu.citizenscience.TreePlotter.LoginActivity" xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/editUserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_userid"
            android:layout_alignBottom="@+id/text_userid"
            android:layout_toRightOf="@+id/text_userid"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_email"
            android:layout_alignBottom="@+id/text_email"
            android:layout_alignRight="@+id/editUserID"
            android:layout_toRightOf="@+id/text_email"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/text_userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="43dp"
            android:text="@string/userid"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/text_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_userid"
            android:layout_below="@+id/editEmail"
            android:layout_marginTop="20dp"
            android:text="@string/exp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_exp"
            android:layout_below="@+id/editUserID"
            android:layout_marginTop="21dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/rg_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_exp"
            android:layout_below="@+id/text_exp"
            android:layout_marginTop="8dp" >

            <RadioButton
                android:id="@+id/rg_beg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/beg" />

            <RadioButton
                android:id="@+id/rg_int"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inter" />

            <RadioButton
                android:id="@+id/rg_adv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adv" />
        </RadioGroup>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:text="@string/returner" />

    </RelativeLayout>

</merge>