<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlotInfoActivity" >

    <TextView
        android:id="@+id/pi_small_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/small"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/pi_add_large"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/large_add" />

    <ListView
        android:id="@+id/pi_large_list"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_above="@+id/pi_add_large"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pi_large_label" >

    </ListView>

    <ListView
        android:id="@+id/pi_small_list"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_above="@+id/pi_add_small"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pi_small_label" >

    </ListView>

    <TextView
        android:id="@+id/pi_large_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pi_add_small"
        android:text="@string/large"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/pi_add_small"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/small_add" />

</RelativeLayout>
