<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/np_plotname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plot_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/np_plot_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="Enter name">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/np_plotcoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coordinates"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/np_plot_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="numberDecimal|numberSigned"
        android:hint="Enter Latitude"/>

    <EditText
        android:id="@+id/np_plot_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:hint="Enter Longitude" />
    <ProgressBar
         android:id="@+id/gps_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         style="@android:style/Widget.ProgressBar"
         android:visibility="gone"
         android:layout_marginRight="5dp" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_gps_coords"
        android:onClick="getGPS"/>
    
    <Button
        android:id="@+id/delete_plot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_row"
        android:background="@color/red"
        android:onClick="verifyDelete"/>

</LinearLayout>
