<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/treePlotApp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_welcome"
        android:layout_alignRight="@+id/text_welcome"
        android:layout_below="@+id/text_welcome"
        android:layout_marginTop="18dp"
        android:text="@string/intro"
        android:textSize="20sp" />

    <Button
        android:id="@+id/plots_table_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:onClick="onClick"
        android:text="@string/plots_table" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_above="@+id/plots_table_button"
        android:layout_alignLeft="@+id/plots_table_button"
        android:onClick="onClick"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:layout_alignLeft="@+id/login_button"
        android:layout_marginBottom="34dp"
        android:text="Users: "
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/Users_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:layout_alignRight="@+id/login_button"
        android:layout_marginBottom="11dp"
        android:layout_toRightOf="@+id/textView1" />

</RelativeLayout>
